--- a/src/mdb/scss/free/_variables.scss
+++ b/src/mdb/scss/free/_variables.scss
@@ -635,8 +635,8 @@ $color-contrast-light: $white !default;
 $min-contrast-ratio: 2 !default;
 
 // scss-docs-start theme-color-variables
-$primary: #3b71ca !default;
-$secondary: #9fa6b2 !default;
+$primary: #05ffcd !default;
+$secondary: #0088ff !default;
 $success: #14a44d !default;
 $danger: #dc4c64 !default;
 $warning: #e4a11b !default;
